# PythonMastery

./: .gitignore  .markdownlint.json  .ruff.toml  INSTRUCTIONS.md  NewVEZEPyServices.md  Procfile  README.md  VEZEPyCGrow  VEZEPySocial  conftest.py  docker-compose.override.yml  docker-compose.yml  mypy.ini  prompt_readme.md
.github/: copilot-instructions.md
.github/workflows/: ecr-push-all.yml  smoke.yml  vezepytests-integration.yml  vezepyuniqverse-ci.yml
VEZEPyChat/: README.md
VEZEPyCommerce/: README.md
VEZEPyCopilotVe1/: README.md
VEZEPyEmail/: Dockerfile  README.md  __init__.py  alembic.ini  pyproject.toml
VEZEPyEmail/.github/workflows/: ci.yml
VEZEPyEmail/alembic/: env.py
VEZEPyEmail/alembic/versions/: 0001_init.py  0002_labels.py
VEZEPyEmail/app/: __init__.py  main.py  security.py
VEZEPyEmail/app/routers/: api.py  jmap.py  ws.py
VEZEPyEmail/app/ui/static/css/: email.css
VEZEPyEmail/app/ui/templates/: _message_row.html  base.html  compose.html  inbox.html  message.html
VEZEPyEmail/db/: database.py  models.py  repository.py
VEZEPyEmail/docs/: dns-records.md  openapi.yaml
VEZEPyEmail/pipeline/: accept.py  sieve.py  spam.py
VEZEPyEmail/smtp/: dkim_sign.py  handlers.py  server.py  spf_dmarc.py
VEZEPyEmail/storage/: blobs.py
VEZEPyEmail/streaming/: queues.py  redis.py
VEZEPyEmail/tests/: test_api_messages.py
VEZEPyGame/: Dockerfile  README.md  __init__.py  pyproject.toml
VEZEPyGame/.github/workflows/: ci.yml  ecr-push.yml
VEZEPyGame/app/: __init__.py  main.py  security.py
VEZEPyGame/app/routers/: __init__.py  public.py  ws.py
VEZEPyGame/app/ui/static/css/: game.css
VEZEPyGame/app/ui/static/js/: game.js  game3d.js  theme.js
VEZEPyGame/app/ui/static/models/: README.md
VEZEPyGame/app/ui/templates/: base.html  inventory.html  leaderboards.html  ui.html
VEZEPyGame/scripts/: ecr_build_push.sh  fetch_3d_vendor.sh
VEZEPyGame/services/: __init__.py  registry.py  registry_cache.py
VEZEPyGame/services/commerce/: api.py
VEZEPyGame/services/email/: __init__.py  api.py  client.py
VEZEPyGame/services/inventory/: __init__.py  api.py
VEZEPyGame/services/leaderboards/: __init__.py  api.py
VEZEPyGame/services/maps/: api.py
VEZEPyGame/services/matchmaking/: __init__.py  api.py
VEZEPyGame/services/ml/: __init__.py  api.py
VEZEPyGame/services/progress/: api.py
VEZEPyGame/services/social/: api.py
VEZEPyGame/services/telemetry/: api.py
VEZEPyGame/services/time/: api.py
VEZEPyGame/services/timevmaps/: api.py
VEZEPyGame/tests/: test_email_proxy.py
VEZEPyMaps/: README.md
VEZEPyMobile/: README.md
VEZEPyQNetworks/: README.md
VEZEPyRAG/: README.md
VEZEPySocial/: README.md
VEZEPySports/: README.md
VEZEPyTests/integration/: test_game_to_email_proxy.py
VEZEPyTests/unit/: test_email_db.py  test_email_health.py  test_game_health.py  test_uniqverse_health.py
VEZEPyTime/: README.md
VEZEPyTimeVMaps/: README.md
VEZEPyUniQVerse/: .env.otel.sample  Dockerfile  README.md  READMEv2.md  __init__.py  pyproject.toml
VEZEPyUniQVerse/app/: __init__.py  config.py  deps.py  main.py
VEZEPyUniQVerse/app/clients/: __init__.py  email_client.py  registry_client.py
VEZEPyUniQVerse/app/routers/: __init__.py  auth.py  pages.py  ws.py  xproxy.py
VEZEPyUniQVerse/app/ui/static/css/: theme.css
VEZEPyUniQVerse/app/ui/static/js/: blackhole.js  theme.js
VEZEPyUniQVerse/app/ui/templates/: base.html  copilot.html  express.html  helm.html  index.html  verse.html
VEZEPyUniQVerse/config/: services.json
VEZEPyUniQVerse/tests/: curl_smoke.sh  test_health.py  test_provision.py  test_ws.py
VEZEPyUniQVerse/veze_uniqverse_portal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
VEZEPyWeb/: README.md
VEZEPyXEngine/: Dockerfile  README-Ve2.md  README.md  pyproject.toml
VEZEPyXEngine/app/: main.py  worker.py
VEZEPyXEngine/app/ui/static/css/: x.css
VEZEPyXEngine/app/ui/static/js/: x.js
VEZEPyXEngine/app/ui/templates/: base.html  index.html  profile.html
VEZEQNetworks/: README.md
docs/: architecture-map.md
docs/ai-assistant-idyll/: VEZEPyUniQVerseVe1.md
infra/terraform/ecs-uniqverse/: README.md  main.tf  outputs.tf  variables.tf
scripts/: ecr_build_all.sh
tests/: test_integration_game_email.py
