[project]
name = "veze-email"
version = "0.1.0"
requires-python = ">=3.11"
description = "Python-only Email Platform (VEZEPyEmail)"
readme = "README.md"
authors = [{ name = "Idyll Intelligent Systems" }]
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "jinja2>=3.1",
  "aiosmtpd>=1.4", "email-validator>=2.1",
  "dkimpy>=1.1.5", "pyspf>=2.0.14", "authlib>=1.3",
  "SQLAlchemy>=2.0", "asyncpg>=0.29", "alembic>=1.13", "aiosqlite>=0.20",
  "redis>=5.0", "httpx>=0.27,<0.28", "loguru>=0.7",
  "prometheus-client>=0.20", "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "pydantic>=2.8", "python-multipart>=0.0.9",
  "scikit-learn>=1.5", "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.5","black>=24.8","mypy>=1.11","pytest>=8.3","pytest-asyncio>=0.23","hypothesis>=6.104"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
  "VEZEPyEmail*",
  "app*",
  "db*",
  "smtp*",
  "storage*",
  "pipeline*",
  "streaming*",
]
exclude = ["tests*"]
