[project]
name = "veze-game"
version = "0.1.0"
requires-python = ">=3.11"
description = "Python-only Game backend (VEZEPyGame)"
readme = "README.md"
authors = [{ name = "Idyll Intelligent Systems" }]
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "jinja2>=3.1",
  "redis>=5.0", "SQLAlchemy>=2.0", "asyncpg>=0.29", "alembic>=1.13",
  "pydantic>=2.8", "httpx>=0.27", "loguru>=0.7",
  "prometheus-client>=0.20", "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "numpy>=1.26", "scikit-learn>=1.5", "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.5","black>=24.8","mypy>=1.11","pytest>=8.3","pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
