[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veze-xengine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "httpx>=0.27,<0.28",
  "jinja2>=3.1",
  "redis>=5.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "tweepy>=4.14"
]

[project.optional-dependencies]
dev = ["pytest>=8.3","pytest-asyncio>=0.23","ruff>=0.5","black>=24.8","mypy>=1.11"]

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["VEZEPyXEngine*", "app*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"app" = [
  "ui/templates/*.html",
  "ui/static/css/*.css",
  "ui/static/js/*.js"
]
